--- a/package.json
+++ b/package.json
@@ -6,19 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@next/font": "^13.4.19",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "7.4.0",
+    "@storybook/addon-interactions": "7.4.0",
+    "@storybook/addon-links": "7.4.0",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.4.0",
+    "@storybook/nextjs": "7.4.0",
+    "@storybook/react": "7.4.0",
+    "@storybook/testing-library": "0.2.0",
+    "eslint-plugin-storybook": "^0.6.13",
+    "storybook": "7.4.0"
   }
 }
