--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
